--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "tailwindcss": "^3.4.1",
     "@astrojs/alpinejs": "^0.4.0",
-    "alpinejs": "^3.13.5"
+    "alpinejs": "^3.13.5",
+    "pnpm": ">=7.1.0"
   }
 }
