--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "tailwindcss": "^3.4.1",
     "@astrojs/alpinejs": "^0.4.0",
     "alpinejs": "^3.13.5",
-    "pnpm": ">=7.1.0"
+    "pnpm": "^7.1.0"
   }
 }
